update du back et mise en place du frontend
